--- a/index.html
+++ b/index.html
@@ -1,1 +1,74 @@
-index.html
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Broadway</title>
+		<link href="resources/css/style.css" rel="stylesheet"></link>
+	</head>	
+	<body>
+	
+		<!--intro section-->
+	
+		<div class="intro">
+			<h1>Broadway Design</h1>
+				<p><a class="buton" href="#Home">Home</a></p>
+				<p><a class="buton" href="#Process">Process</a></p>
+				<p><a class="buton" href="#Work">Work</a></p>
+				<p><a class="buton" href="#Team">Team</a></p>
+				<p><a class="buton" href="#Contact">Contact</a></p>
+		</div>		
+			<div class="talie1">	
+				<h2>Our Process</h2>
+				<div class="talie3">	
+					<img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg" />
+					<h3>Identify</h3>
+					<p>We focus on the most important details.</p>
+				</div>
+				<div class="talie3">	
+					<img src="	https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg" />
+					<h3>Understand</h3>
+					<p>We study our projects inside and out.</p>
+				</div>	
+				<div class="talie3">	
+					<img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg" />
+					<h3>Execute</h3>
+					<p>We put everything we have into our work.</p>
+				</div>
+			</div>
+
+			
+			<div class="intro">
+				<h2>Design in New York</h2>
+			</div>
+			
+			
+			<div class="talie1">
+				<div class="talie3">	
+					<h3>Portfolio</h3>
+					<p>Coming soon</p>
+				</div>	
+			</div>
+			<div class="talie1">
+				<div class="talie3">
+					<h3>Team</h3>
+					<p>We're Hiring!</p>
+				</div>	
+			</div>
+			<div class="talie3">
+				<div class="talie3">
+					<h3>Contact</h3>
+					<p>Phone: (555)-555-5555</p>
+					<p>E-mail: test@example.com</p>
+					<p>Twitter: @test</p>
+				</div>	
+			</div>	
+		<div class="talie4">
+			<p>
+				&#169; Broadway 2017
+				<a class="talie5" href="#">Home</a>
+				<a class="talie5" href="#">About</a>
+				<a class="talie5" href="#">Work</a>
+				<a class="talie5" href="#">Team</a>
+				<a class="talie5" href="#">Contact</a>
+			</p>
+	</body>	
+</html>
